force-app/main/default/objects/SPEN_Voicemail__c/SPEN_Voicemail__c.object-meta.xml
<CustomObject>
    <description>Omni-channel work item to distribute voicemail assignments to agents.</description>
    <label>Voicemail</label>
    <nameField>
        <displayFormat>VCM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voicemails</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>