force-app/main/default/objects/SPEN_Voicemail__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <description>Indicates what type of call the voicemail is.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>