force-app/main/default/objects/SPEN_Voicemail__c/fields/SPEN_VoiceCallId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VoiceCallId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The voice call record where an Agent can find the recording and transcription.</description>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Voicemails</relationshipLabel>
    <relationshipName>SPEN_Voicemails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>