force-app/main/default/objects/SPEN_Voicemail__c/listViews/SPEN_VoicemailQueue_SPEN_Voicemail.listView-meta.xml
<ListView>
    <fullName>SPEN_VoicemailQueue_SPEN_Voicemail</fullName>
    <filterScope>Queue</filterScope>
    <label>Voicemail Queue</label>
    <queue>SPEN_VoicemailQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>